--- a/public/css/frontend/frontent-oldstyle.css
+++ b/public/css/frontend/frontent-oldstyle.css
@@ -71,9 +71,9 @@ input[type="radio"] + label span {
 
 input[type="radio"]:checked + label span::before {
   content: "\f111";
-  font-size: 7px;
-  left: 5px;
-  top: 6px;
+  font-size: 8px;
+  left: 4px;
+  top: 4px;
 }
 
 .form-group::-webkit-input-placeholder{
@@ -90,7 +90,6 @@ input[type="radio"]:checked + label span::before {
   color: #5d5f5d;
   font-family: "lato"; 
 }
-
 
 /* -----------------------
     START OF OWL CAROUSEL
@@ -396,13 +395,6 @@ body {
 section {
     padding: 30px 0;
 }
-.animate {
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    -o-transition: all 0.3s ease-in-out;
-    -ms-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-}
 .btn{
     border: 1px solid #ccc;
     padding-bottom: 5px;
@@ -483,7 +475,7 @@ section {
 }
 .section-title h2{
     margin: 0;
-    background:url('../images/title-bg.jpg') repeat-x 0 0;
+    background:url('../../images/title-bg.jpg') repeat-x 0 0;
     display: inline-block;
     padding:0 50px 0 20px;
     height: 50px;
@@ -673,7 +665,43 @@ section {
     display: none;
 }
 #menu-wrapper{ display: none; }
+        .sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 3;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    text-align:left;
+}
 
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #575757;
+    display: block;
+    transition: 0.3s;
+
+}
+
+.sidenav a:hover{
+    color: #575757;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 16px;
+    margin-left: 0;
+    padding: 0;
+    line-height: 30px;
+}
 
 /*-------------------------------
     Global Drop Down Menu
@@ -767,9 +795,6 @@ section {
     /* Firefox 18- */
     color: #d5d5d5;
     opacity: 1 !important;
-}
-.mid-header .search-box .btn.btn-danger {
-  display: none;
 }
 .mid-header .search-box .input-group-btn .btn {
   padding: 6px 15px;
@@ -1011,10 +1036,6 @@ nav{
 .right-image-content.full-width img {
   width: 100%;
   height: 257px;
-}
-
-.nav-toggle{
-    display: none;
 }
 
 /*-------------------------------
@@ -2338,18 +2359,13 @@ label {
     margin-top: 20px;
 }
 
-.box .form-control, .box textarea.form-control{
+.box .form-control{
   border-radius: 3px;
   color: #575757;
   background: #f9f9f9;
   height: 40px;
 }
-.box textarea.form-control{
-    height: 150px;
-}
-.tab-content #messages .box .form-group input[type="submit"]{
-    width: 90%
-}
+
 .payment-option {
   float: left;
   margin-top: 10px;
@@ -2772,13 +2788,5 @@ input:checked + .slider:before {
 .panel-title > a:focus  {
     text-decoration:none;
 }
-
-
-
-
-
-
-
-
 
 
