--- a/public/css/frontend/la-fonts.css
+++ b/public/css/frontend/la-fonts.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "la-icons";
-    src: url(../font/la-icons.eot);
-    src: url(../font/la-iconsd41d.eot?#iefix) format("embedded-opentype"), 
-    url(../../font/la-icons.woff) format("woff"), 
-    url(../../font/la-icons.ttf) format("truetype"), 
-    url(../font/la-icons.svg#la-icons) format("svg")
+    src: url(../fonts/la-icons.eot);
+    src: url(../fonts/la-iconsd41d.eot?#iefix) format("embedded-opentype"), 
+    url(../fonts/la-icons.woff) format("woff"), 
+    url(../fonts/la-icons.ttf) format("truetype"), 
+    url(../fonts/la-icons.svg#la-icons) format("svg")
 }
 
 [class*="la-icon-"],
