--- a/public/css/frontend/xzoom.css
+++ b/public/css/frontend/xzoom.css
@@ -68,7 +68,7 @@
   background-repeat: no-repeat;
   border-radius: 100%;
   opacity: .7;
-  background: url(../../images/xloading.gif);
+  background: url(../images/xloading.gif);
   width: 48px;
   height: 48px;
 }
