--- a/public/css/frontend/responsive.css
+++ b/public/css/frontend/responsive.css
@@ -314,11 +314,11 @@ footer.footer-wrapper { text-align: center; }
 }
   
 
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : landscape) {
+@media only screen and (min-device-width: 360px) and (max-device-width: 640px) and (orientation : landscape) {
 
 }
 
-@media only screen and (min-width: 481px) and (max-height: 640px){
+@media only screen and (min-width: 481px) and (max-width: 640px){
 .brand-list li { margin-right: 0; width: 47%; }
 .collapse.in .viewall-dropdown-content::after{ left: 56px; }
 }
