--- a/public/css/frontend/style.css
+++ b/public/css/frontend/style.css
@@ -1083,7 +1083,7 @@ nav{
 }
 #viewall-dropdown .products-wrapper.viewall-dropdown-content .product-img,
 #viewall-dropdown .products-wrapper.viewall-dropdown-content .product-img img {
-  height: 230px;
+  height: 250px;
 }
 .products-wrapper.viewall-dropdown-content .product-img,
 .products-wrapper.viewall-dropdown-content .product-img img {
@@ -1171,7 +1171,7 @@ nav{
   font-size: 10px;
 }
 .thumbnail .caption {
-  /* padding: 20px; */
+  padding: 15px 10px;
 }
 .caption .card-text {
   margin-bottom: 5px;
@@ -1503,7 +1503,7 @@ padding-bottom: 8px;
 #viewall-dropdown .products-wrapper.no-scroll.viewall-dropdown-content [class^="col-"]{
     padding-right: 10px;
     padding-left: 10px;
-    width: 20%;
+    width: 25%;
 }
 .collapse-small .viewall-dropdown-content {
   padding: 0 25px;
@@ -1549,7 +1549,23 @@ padding-bottom: 8px;
   padding-top: 30px;
   clear: both;
 }
+/*-------------------------------
+    catagory-list
+-------------------------------*/
+.catagory-list-wrap .viewmore-btn .btn-default{
+    background: none;
+    border: none;
+    margin-top: 0;
+    padding: 15px 20px;
+}
+.catagory-list-wrap .viewmore-btn .btn-default{
+    border: none;
+}
 
+.catagory-add .addbanner-catagorylist img {
+  width: 100%;
+  height: 405px;
+}
 /*-------------------------------
     brand Page
 -------------------------------*/
@@ -1825,10 +1841,22 @@ aside.sidebar .viewmore-btn .btn-default{
 }
 
 .brand-detail.gray-bg{
-    padding: 25px 15px;
-    border: 1px solid #ccc;
+  padding: 25px 15px;
+  border: 1px solid #ccc;
 }
-
+.product-logo > img {
+  border: 1px solid #ccc;
+  float: left;
+  height: 40px;
+  margin-right: 15px;
+  width: 50px;
+}
+.product-logo > span {
+  display: inline-block;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 9px;
+}
 .brand-detail.gray-bg p{
     color: #575757;
     margin: 30px 0;
@@ -1836,14 +1864,15 @@ aside.sidebar .viewmore-btn .btn-default{
 
 .brand-detail .viewmore-btn .btn-default{
     background: none;
-    font-size: 15px;
+    font-size: 13px;
+    line-height: 15px;
     margin-top: 0;
     padding: 7px 15px;
     outline: none;
 }
 
 .collapse-small.collapse.in .viewall-dropdown-content::after{
-    right: 115px;
+    right: 130px;
 }
 
 .brands-list .item {
@@ -2101,6 +2130,7 @@ div.qty-section > div > input {
 .single-product-info .pro-price .incl-dis{
     border: 1px solid #ccc;
     border-radius: 2px;
+    font-size: 13px;
     padding: 0 5px;
 }
 .single-product-info .pro-price .incl-taxes{
@@ -2147,12 +2177,13 @@ div.qty-section > div > input {
 }
 .sin-pro-color .widget-color ul li {
   display: inline-block;
-  height: 35px;
+  height: 37px;
   margin-right: 10px;
-  width: 35px;
+  width: 37px;
 }
 .widget-color ul li {
-  border: 1px solid #ffffff;
+  border: 2px solid transparent;
+  border-radius: 3px;
   display: block;
   position: relative;
 }
@@ -2184,9 +2215,33 @@ div.qty-section > div > input {
 .widget-color ul li.blue:before {background: #0000FF;}
 .widget-color ul li.purple:before {background: #800080;}
 .widget-color ul li.aqua:before {background: #00FFFF;}
-.widget-color ul li input[type="radio"]:checked + label{ border: 2px solid #ffffff; }
-.widget-color ul li input[type="radio"]:checked + label span::before{ visibility: hidden; }
+.product-info-item input[type="radio"] + label.attributeSelected{ border: 2px solid #742b96 }
+.product-info-item input[type="radio"]:checked + label span::before{ visibility: hidden; }
+.widget-color ul li input[type="radio"] + label.attributeSelected {
+  border: 2px solid #742b96;
+  box-shadow: 0 0 2px #330033;
+  border-radius: 3px;
+  height: 37px;
+  margin-left: -2px;
+  margin-top: -2px;
+  width: 37px;
+}
+.product-size label{
+  border: 2px solid #ccc;
+  border-radius: 3px;
+  margin-right: 10px;
+}
 
+.product-size input[type="radio"] + label span{
+  border: none;
+  display: table-cell;
+  font-size: 15px;
+  height: 35px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 35px;
+}
+.product-size{ border: none; }
 
 .nav-tabs { border-bottom: 1px solid #ccc; margin: 0 25px;}
 .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; background: none;}
